--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../imagens e icons/icon.ico">
+    <link rel="stylesheet" href="./site cedup/css/style.css">
+    <link rel="shortcut icon" href="./site cedup/imagens e icons/logocedup70px.png">
     <title>Cedup Guaramirim</title>
 </head>
 
@@ -14,13 +14,13 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <img src="../imagens e icons/logocedup.png">
+                <img src="./site cedup/imagens e icons/logocedup.png">
             </div>
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="cursos.html" class="nav-link">Cursos</a></li>
-                    <li class="nav-item"><a href="sobre.html" class="nav-link"> Sobre</a></li>
+                    <li class="nav-item"><a href="./site cedup/assets/cursos.html" class="nav-link">Cursos</a></li>
+                    <li class="nav-item"><a href="./site cedup/assets/sobre.html" class="nav-link"> Sobre</a></li>
                 </ul>
             </div>
             <div class="login-button">
@@ -28,14 +28,14 @@
             </div>
 
             <div class="mobile-menu-icon">
-                <button onclick="menuShow()"><img class="icon" src="assets/img/menu_white_36dp.svg" alt=""></button>
+                <button onclick="menuShow()"><img class="icon" src="./assets/img/menu_white_36dp.svg" alt=""></button>
             </div>
         </nav>
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="cursos.html" class="nav-link">Cursos</a></li>
-                <li class="nav-item"><a href="sobre.html" class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="./site cedup/assets/cursos.html" class="nav-link">Cursos</a></li>
+                <li class="nav-item"><a href="./site cedup/assets/sobre.html" class="nav-link">Sobre</a></li>
             </ul>
 
             <div class="login-button">
@@ -50,7 +50,7 @@
     </div>
 
      <div class="image-container">
-        <img src="../imagens e icons/centro.jpg" alt="">
+        <img src="./site cedup/imagens e icons/centro.jpg" alt="">
     </div>
 
      <div class="iconlocation">
@@ -69,7 +69,7 @@
     <footer>
         <div id="footer_content">
             <div id="footer_contacts">
-                <img src="../imagens e icons/logocedup70px.png">
+                <img src="./site cedup/imagens e icons/logocedup70px.png">
                 <p>O conhecimento transforma!</p>
 
                 <div id="footer_social_media">
@@ -96,13 +96,13 @@
                     <h3>Conheça o Cedup</h3>
                 </li>
                 <li>
-                    <a href="infra.html" class="footer-link">Infraestrutura</a>
+                    <a href="./site cedup/assets/infra.html" class="footer-link">Infraestrutura</a>
                 </li>
                 <li>
-                    <a href="galeria.html" class="footer-link">Galeria de Turmas</a>
+                    <a href="./site cedup/assets/galeria.html" class="footer-link">Galeria de Turmas</a>
                 </li>
                 <li>
-                    <a href="eventos.html" class="footer-link">Eventos</a>
+                    <a href="./site cedup/assets/eventos.html" class="footer-link">Eventos</a>
                 </li>
             </ul>
 
@@ -111,13 +111,13 @@
                     <h3>Informações</h3>
                 </li>
                 <li>
-                    <a href="matricula.html" class="footer-link">Matrículas</a>
+                    <a href="./site cedup/assets/matricula.html" class="footer-link">Matrículas</a>
                 </li>
                 <li>
-                    <a href="horario.html" class="footer-link">Horário de Aulas</a>
+                    <a href="./site cedup/assets/horario.html" class="footer-link">Horário de Aulas</a>
                 </li>
                 <li>
-                    <a href="cardapio.html" class="footer-link">Cardápio</a>
+                    <a href="./site cedup/assets/cardapio.html" class="footer-link">Cardápio</a>
                 </li>
             </ul>
 
@@ -126,13 +126,13 @@
                     <h3>Outros</h3>
                 </li>
                 <li>
-                    <a href="trabalhe.html" class="footer-link" >Trabalhe Conosco</a>
+                    <a href="./site cedup/assets/trabalhe.html" class="footer-link" >Trabalhe Conosco</a>
                 </li>
                 <li>
-                    <a href="fale.html" class="footer-link" >Fale Conosco</a>
+                    <a href="./site cedup/assets/fale.html" class="footer-link" >Fale Conosco</a>
                 </li>
                 <li>
-                    <a href="destaques.html" class="footer-link" >Destaques</a>
+                    <a href="./site cedup/assets/destaques.html" class="footer-link" >Destaques</a>
                 </li>
             </ul>
     
@@ -157,6 +157,6 @@
             2023 CEDUP Guaramirim. Todos os direitos reservados.
         </div>
     </footer>
-    <script src="..assets/js/script.js"></script>
+    <script src="./site cedup/assets/js/script.js"></script>
 </body>
 </html>
